Changed r2 to correlation coefficient

--- a/Pymaceuticals/pymaceuticals_picca.ipynb
+++ b/Pymaceuticals/pymaceuticals_picca.ipynb
@@ -725,7 +725,7 @@
    "source": [
     "# Calculate the correlation coefficient and linear regression model for mouse weight and average tumor volume for the Capomulin regimen\n",
     "\n",
-    "# Feed the previously created x and y to the scipy pearsonr method and print the first value (the r^2 value)\n",
+    "# Feed the previously created x and y to the scipy pearsonr method and print the first value (the correlation coefficient)\n",
     "print(f'The calculated correlation coefficient is {st.pearsonr(x,y)[0]}')\n",
     "\n",
     "# Use the linregress function to generate slope, intercept, and other variables (which we don't need for this ask)\n",
